1999-11-04  Havoc Pennington  <hp@pobox.com>

	* configure.in: Use libart-config correctly; find gnome-config
	separately. Fix GNOME_LIBS to be correct in "no gnome installed
	yet" case.

	* src/Makefile.am: Link to GNOME_LIBS instead of a hardcoded
	library list.

	Patch untested in the inside-gnome-libs case, I need to commit
	then check out to the gnome-libs I'm using.	
	
1999-11-04  Michael Fulbright  <drmike@redhat.com>

	* src/io-jpeg.c (image_begin_load): Add update_func callback.
	* src/io-jpeg.c (image_load_increment): Call updated callback when
	new graphic data decoded.

1999-11-04  Jonathan Blandford  <jrb@redhat.com>

	* src/gdk-pixbuf-loader.c (gdk_pixbuf_loader_update): handle the
	actual update.
	* src/io-png.c (image_begin_load): add a update_func callback.
	* src/io-gif.c (image_begin_load): add a update_func callback.
	* src/io-tiff.c (image_begin_load): add a update_func callback.

1999-11-04  Federico Mena Quintero  <federico@redhat.com>

	* doc/tmpl/gdk-pixbuf.sgml: Populated.

	* doc/tmpl/refcounting.sgml: Populated.

	* doc/tmpl/file-loading.sgml: Populated.

	* src/gdk-pixbuf.c: Added documentation comments.

	* src/gdk-pixbuf-io.c (gdk_pixbuf_new_from_file): Added
	documentation comments.

	* doc/: Finished integrating the documentation framework.

1999-11-03  Federico Mena Quintero  <federico@redhat.com>

	* configure.in: Removed libgif stuff now that we do not depend on it.
	Added the necessary cruft for gtk-doc.

	* src/Makefile.am: Unconditionally build the GIF loader.

1999-11-03  Jonathan Blandford  <jrb@redhat.com>

	* src/io-gif.c (gif_read): renamed ReadOK to gif_read.
	Added a lot of comments to the file.

	* src/Makefile.am (libpixbuf_gif_la_LIBADD): Remove dependency on
	lib*gif!!!!

1999-11-03  Michael Fulbright  <drmike@redhat.com>

	* src/io-jpeg.c (image_load_increment): Further removal of
	bugginess in local buffering code. Handles grayscale jpegs
	correctly now.
